#src = [
#  'jsenums.cpp',
#  'jsbindings.cpp',
#]
#
## js_src = [
##   # TODO: compile the JS using EMSCRIPTEN
##   ${CMAKE_CURRENT_SOURCE_DIR}/wasmloader.js
##   ${CMAKE_CURRENT_SOURCE_DIR}/utilities.js)
## ]
#
## TODO: fPIC
#
#
#shared_library('filamentjs', src,
## TODO: include generate headers
## TODO: link against imgui, filament, filamat
##include_directories : include_directories('include'), 
#  # target_link_libraries(filamentjs PRIVATE filament math utils image filameshio)
#  include_directories : include_directories(
#    '../math/include',
#    '../utils/include',
#    '../image/include',
#    '../filabridge/include',
#    '../../filament/include/',
#    ), 
#  )
